# spectre

./: .cursorrules  .gitignore  ALGORITHM_VALIDATION.md  COPYRIGHT.md  Cargo.toml  GPL_COMPLIANCE.md  IMPLEMENTATION_NOTES.md  LICENSE  NOTICE  README.md  TESTING.md  VALIDATION_COMPLETE.md
.github/workflows/: deploy-pages.yaml
docs/: EXAMPLES.md  TEST_SUMMARY.md
spectre-app/: Cargo.toml  Dioxus.toml
spectre-app/assets/: main.css  tailwind.css  worker.js
spectre-app/src/: main.rs  worker.rs
spectre-app/src/components/: footer.rs  form_fields.rs  header.rs  identicon_display.rs  mod.rs  password_counter_selector.rs  password_type_selector.rs  site_password.rs
src/: algorithm.rs  error.rs  lib.rs  marshal.rs  models.rs  types.rs  util.rs
tests/: README.md  csv_tests.rs  integration_tests.rs  test_vectors.csv
