[package]
name = "spectre"
version = "0.1.0"
edition = "2024"
authors = ["Abdulrhman Alkhodiry"]
license = "GPL-3.0-or-later"
description = "A Rust implementation of the Spectre password manager (derivative of Maarten Billemont's original work)"
homepage = "https://spectre.app"

[[bin]]
name = "spectre-cli"
path = "src/bin/main.rs"

[lib]
name = "spectre"
path = "src/lib.rs"

[dependencies]
# Cryptography
scrypt = "0.11"
hmac = "0.12"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
