[package]
name = "spectre-app"
version = "0.1.0"
authors = ["Abdulrhman Alkhodiry <aalkhodiry@naylafinance.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
spectre-rs = { path = "..", default-features = false }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Clipboard", "Worker", "WorkerGlobalScope", "MessageEvent", "MessagePort", "DedicatedWorkerGlobalScope", "Blob", "Url"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
futures = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
